# Chess

./: .gitmodules  CMakeLists.txt  README.md
header/: Board.h  BoardHistory.h  BoardPrinter.h  CastleChecker.h  CheckChecker.h  Color.h  Constants.h  King.h  LegalityChecker.h  Move.h  MoveDialog.h  MoveParser.h  Piece.h  PieceFactory.h  PositionFunctions.h  Square.h  TestFunctions.h
src/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  BoardHistory.cpp  BoardPrinter.cpp  CMakeLists.txt  CastleChecker.cpp  CastleChecker.h  CheckChecker.cpp  CheckChecker.h  Color.cpp  Color.h  Coord.cpp  DangerChecker.cpp  DangerChecker.h  King.cpp  King.h  Knight.cpp  Knight.h  LegalityChecker.cpp  LegalityChecker.h  Move.cpp  Move.h  MoveDialog.cpp  MoveDialog.h  MoveParser.cpp  MoveParser.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  PieceFactory.cpp  PieceFactory.h  PieceType.h  PositionFunctions.cpp  PositionFunctions.h  Queen.cpp  Queen.h  Rook.cpp  (+7 more)
src/headerfiles/: Board.h  CheckChecker.h  DangerChecker.h  Knight.h  MoveDialog.h  PieceType.h  Queen.h  Square.h
src/sourcefiles/: Bishop.cpp  Board.cpp  CastleChecker.cpp  CheckChecker.cpp  DangerChecker.cpp  King.cpp  Knight.cpp  LegalityChecker.cpp  MoveDialog.cpp  MoveParser.cpp  Pawn.cpp  Piece.cpp  PieceFactory.cpp  PositionFunctions.cpp  Queen.cpp  Rook.cpp  main.cpp
test/: BoardHistory_test.cpp  Board_test.cpp  CMakeLists.txt  CastleChecker_test.cpp  CheckChecker_test.cpp  Coord_test.cpp  DangerChecker_test.cpp  LegalityChecker_test.cpp  MoveDialog_test.cpp  MoveParser_test.cpp  Pawn_test.cpp  Piece_test.cpp  Square_test.cpp  addition_test.cpp  test_main.cpp
